Block Toolbar: fixed focus rect misalignment (block move buttons) in IE11

--- a/packages/block-editor/src/components/block-mover/style.scss
+++ b/packages/block-editor/src/components/block-mover/style.scss
@@ -76,6 +76,7 @@
 			&::before {
 				bottom: 0;
 				height: calc(100% - #{ $border-width });
+				top: auto;
 			}
 		}
 
